fix logo alignment

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -116,7 +116,9 @@ body
   border-bottom: 2px solid $color-grey-dark
 
 .sponsor-logo
+  display: block
   max-width: 60px
 
 .sponsor-logo-igv
+  display: block
   max-width: 80px
